Get a11y unit test passing

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,7 +1,9 @@
 <div>
-  <span x-large>Your Content Here</span>
   <form (ngSubmit)="submitState(localState.value)">
-    <input type="text" [value]="localState.value" (input)="localState.value = $event.target.value" autofocus>
+    <label>
+      <span x-large>Your Content Here</span>
+      <input type="text" [value]="localState.value" (input)="localState.value = $event.target.value" autofocus>
+    </label>
     <button>Submit Value</button>
   </form>
   <!--
